{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 53,
  "lineage": "00bfc84e-8221-7d88-607c-07ac803fecb2",
  "resources": [
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "InstanceSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:security-group/sg-0059484952ab134bd",
            "description": "Security Group for EC2-Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0059484952ab134bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "POSTGRES Access from anywhere",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-InstanceSecurityGroup",
            "name_prefix": "",
            "owner_id": "540282036386",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-Instance-SG"
            },
            "tags_all": {
              "Name": "default-Instance-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.PublicRouteTable",
            "module.vpc.aws_subnet.PrivateSubnet",
            "module.vpc.aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "module": "module.SG2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "InstanceSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:security-group/sg-0c7a94743b9eaebeb",
            "description": "Security Group for EC2-Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7a94743b9eaebeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "POSTGRES Access from anywhere",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-InstanceSecurityGroup",
            "name_prefix": "",
            "owner_id": "540282036386",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-Instance-SG"
            },
            "tags_all": {
              "Name": "default-Instance-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available",
            "module.secondaryvpc.aws_route_table.PublicRouteTable",
            "module.secondaryvpc.aws_subnet.PrivateSubnet",
            "module.secondaryvpc.aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIPAddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0588343202e7c69d9",
            "association_id": "eipassoc-0a3db376af6579f89",
            "domain": "vpc",
            "id": "eipalloc-0588343202e7c69d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07386408ce8e56736",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-3-212-221-243.compute-1.amazonaws.com",
            "public_ip": "3.212.221.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.secondaryvpc.aws_internet_gateway.InternetGateway",
            "module.secondaryvpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:internet-gateway/igw-0e0bae6b164107ebc",
            "id": "igw-0e0bae6b164107ebc",
            "owner_id": "540282036386",
            "tags": {
              "Name": "default-InternetGateway"
            },
            "tags_all": {
              "Name": "default-InternetGateway"
            },
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0588343202e7c69d9",
            "connectivity_type": "public",
            "id": "nat-0ddc4cf7ade545dd6",
            "network_interface_id": "eni-07386408ce8e56736",
            "private_ip": "10.0.1.25",
            "public_ip": "3.212.221.243",
            "subnet_id": "subnet-0a738013b3bcd7dbf",
            "tags": {
              "Name": "default-NATGateway"
            },
            "tags_all": {
              "Name": "default-NATGateway"
            }
          },
          "dependencies": [
            "module.secondaryvpc.aws_eip.ElasticIPAddress",
            "module.secondaryvpc.aws_internet_gateway.InternetGateway",
            "module.secondaryvpc.aws_subnet.PublicSubnet",
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "PrivateRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07640a2243c1d278c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ddc4cf7ade545dd6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07640a2243c1d278c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondaryvpc.aws_nat_gateway.NATGateway",
            "module.secondaryvpc.aws_route_table.PrivateRouteTable"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "PublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e0bae6b164107ebc",
            "id": "r-rtb-0a613463cbb4543961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a613463cbb454396",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondaryvpc.aws_internet_gateway.InternetGateway",
            "module.secondaryvpc.aws_route_table.PublicRouteTable",
            "module.secondaryvpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:route-table/rtb-07640a2243c1d278c",
            "id": "rtb-07640a2243c1d278c",
            "owner_id": "540282036386",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ddc4cf7ade545dd6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-PrivateRouteTable"
            },
            "tags_all": {
              "Name": "default-PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:route-table/rtb-0a613463cbb454396",
            "id": "rtb-0a613463cbb454396",
            "owner_id": "540282036386",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0bae6b164107ebc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-PublicRouteTable"
            },
            "tags_all": {
              "Name": "default-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0829b346971d4ff14",
            "route_table_id": "rtb-07640a2243c1d278c",
            "subnet_id": "subnet-0dc6a030fe90296cd"
          },
          "dependencies": [
            "module.secondaryvpc.aws_route_table.PrivateRouteTable",
            "module.secondaryvpc.aws_subnet.PrivateSubnet",
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7409f5f3e61a053",
            "route_table_id": "rtb-07640a2243c1d278c",
            "subnet_id": "subnet-08ad1f6d277e0ab5e"
          },
          "dependencies": [
            "module.secondaryvpc.aws_route_table.PrivateRouteTable",
            "module.secondaryvpc.aws_subnet.PrivateSubnet",
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076b2aa09d088885a",
            "route_table_id": "rtb-0a613463cbb454396",
            "subnet_id": "subnet-0a738013b3bcd7dbf"
          },
          "dependencies": [
            "module.secondaryvpc.aws_route_table.PublicRouteTable",
            "module.secondaryvpc.aws_subnet.PublicSubnet",
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d86175c041684d5d",
            "route_table_id": "rtb-0a613463cbb454396",
            "subnet_id": "subnet-0b051d8e40d3473d4"
          },
          "dependencies": [
            "module.secondaryvpc.aws_route_table.PublicRouteTable",
            "module.secondaryvpc.aws_subnet.PublicSubnet",
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-0dc6a030fe90296cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc6a030fe90296cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PrivateSubnet1"
            },
            "tags_all": {
              "Name": "default-PrivateSubnet1"
            },
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-08ad1f6d277e0ab5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ad1f6d277e0ab5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PrivateSubnet2"
            },
            "tags_all": {
              "Name": "default-PrivateSubnet2"
            },
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-0a738013b3bcd7dbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a738013b3bcd7dbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PublicSubnet1"
            },
            "tags_all": {
              "Name": "default-PublicSubnet1"
            },
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-0b051d8e40d3473d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b051d8e40d3473d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PublicSubnet2"
            },
            "tags_all": {
              "Name": "default-PublicSubnet2"
            },
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC",
            "module.secondaryvpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:vpc/vpc-0743d1262d051d0d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034901af090c1ecb5",
            "default_route_table_id": "rtb-08246ff5413218ed5",
            "default_security_group_id": "sg-0a0113525785e66c4",
            "dhcp_options_id": "dopt-0e611fc79e8b76da6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0743d1262d051d0d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08246ff5413218ed5",
            "owner_id": "540282036386",
            "tags": {
              "Name": "default-VPC"
            },
            "tags_all": {
              "Name": "default-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.secondaryvpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:vpc-endpoint/vpce-0ca32942c656e4694",
            "cidr_blocks": [
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19"
            ],
            "id": "vpce-0ca32942c656e4694",
            "owner_id": "540282036386",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a613463cbb454396"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0743d1262d051d0d8"
          },
          "dependencies": [
            "module.secondaryvpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIPAddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d736e7c78db28d2",
            "association_id": "eipassoc-0de5faae88e1adfd7",
            "domain": "vpc",
            "id": "eipalloc-02d736e7c78db28d2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05f708a661caca183",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-52-3-2-21.compute-1.amazonaws.com",
            "public_ip": "52.3.2.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.InternetGateway",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:internet-gateway/igw-07e1500a535442b5d",
            "id": "igw-07e1500a535442b5d",
            "owner_id": "540282036386",
            "tags": {
              "Name": "default-InternetGateway"
            },
            "tags_all": {
              "Name": "default-InternetGateway"
            },
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d736e7c78db28d2",
            "connectivity_type": "public",
            "id": "nat-029873d94bf5999fa",
            "network_interface_id": "eni-05f708a661caca183",
            "private_ip": "10.0.1.78",
            "public_ip": "52.3.2.21",
            "subnet_id": "subnet-04635ee4cbb5e5585",
            "tags": {
              "Name": "default-NATGateway"
            },
            "tags_all": {
              "Name": "default-NATGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_eip.ElasticIPAddress",
            "module.vpc.aws_internet_gateway.InternetGateway",
            "module.vpc.aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "PrivateRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04b4ce8941e498b941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-029873d94bf5999fa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b4ce8941e498b94",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.NATGateway",
            "module.vpc.aws_route_table.PrivateRouteTable"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "PublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07e1500a535442b5d",
            "id": "r-rtb-0d72c459546c2ae7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d72c459546c2ae7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.InternetGateway",
            "module.vpc.aws_route_table.PublicRouteTable",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:route-table/rtb-04b4ce8941e498b94",
            "id": "rtb-04b4ce8941e498b94",
            "owner_id": "540282036386",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-029873d94bf5999fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-PrivateRouteTable"
            },
            "tags_all": {
              "Name": "default-PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:route-table/rtb-0d72c459546c2ae7a",
            "id": "rtb-0d72c459546c2ae7a",
            "owner_id": "540282036386",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e1500a535442b5d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-PublicRouteTable"
            },
            "tags_all": {
              "Name": "default-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05be564f93c1d94f0",
            "route_table_id": "rtb-04b4ce8941e498b94",
            "subnet_id": "subnet-03ae6a4e0605ce9b1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRouteTable",
            "module.vpc.aws_subnet.PrivateSubnet",
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa364549e4d49805",
            "route_table_id": "rtb-04b4ce8941e498b94",
            "subnet_id": "subnet-0a00f08ac59f21493"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PrivateRouteTable",
            "module.vpc.aws_subnet.PrivateSubnet",
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb096c5224e158fe",
            "route_table_id": "rtb-0d72c459546c2ae7a",
            "subnet_id": "subnet-04635ee4cbb5e5585"
          },
          "dependencies": [
            "module.vpc.aws_subnet.PublicSubnet",
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.PublicRouteTable"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d78afd20f74f66f9",
            "route_table_id": "rtb-0d72c459546c2ae7a",
            "subnet_id": "subnet-0205e35033e33caad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.PublicRouteTable",
            "module.vpc.aws_subnet.PublicSubnet",
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-03ae6a4e0605ce9b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ae6a4e0605ce9b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PrivateSubnet1"
            },
            "tags_all": {
              "Name": "default-PrivateSubnet1"
            },
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-0a00f08ac59f21493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a00f08ac59f21493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PrivateSubnet2"
            },
            "tags_all": {
              "Name": "default-PrivateSubnet2"
            },
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-04635ee4cbb5e5585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04635ee4cbb5e5585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PublicSubnet1"
            },
            "tags_all": {
              "Name": "default-PublicSubnet1"
            },
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:subnet/subnet-0205e35033e33caad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0205e35033e33caad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540282036386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-PublicSubnet2"
            },
            "tags_all": {
              "Name": "default-PublicSubnet2"
            },
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:vpc/vpc-001d5801ef363caa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015109d29f881b143",
            "default_route_table_id": "rtb-0e7dda330a3b4a6b0",
            "default_security_group_id": "sg-01c2372e297a5257b",
            "dhcp_options_id": "dopt-0e611fc79e8b76da6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-001d5801ef363caa0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e7dda330a3b4a6b0",
            "owner_id": "540282036386",
            "tags": {
              "Name": "default-VPC"
            },
            "tags_all": {
              "Name": "default-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540282036386:vpc-endpoint/vpce-0858f33ca0d14c8c9",
            "cidr_blocks": [
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19"
            ],
            "id": "vpce-0858f33ca0d14c8c9",
            "owner_id": "540282036386",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d72c459546c2ae7a"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-001d5801ef363caa0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    }
  ]
}